--- a/config/eap-fast-tls-1.2.conf
+++ b/config/eap-fast-tls-1.2.conf
@@ -1,4 +1,4 @@
-network = {
+network={
 	key_mgmt=IEEE8021X
 	eap=FAST
 
@@ -7,7 +7,8 @@ network = {
 	identity="bob"
 	password="hello"
 
-	phase1="tls_disable_session_ticket=0 fast_provisioning=2"
+	# tls-1.2
+	phase1="tls_disabl_tlsv1_0=1 tls_disable_tlsv1_1=1 tls_disable_tlsv1_2=0 tls_disable_tlsv1_3=1 tls_disable_session_ticket=1 fast_provisioning=2"
 
 	pac_file="blob://eap-fast-pac"
 
