--- a/config/eap-fast-tls-1.2.conf
+++ b/config/eap-fast-tls-1.2.conf
@@ -8,7 +8,7 @@ network={
 	password="hello"
 
 	# tls-1.2
-	phase1="tls_disabl_tlsv1_0=1 tls_disable_tlsv1_1=1 tls_disable_tlsv1_2=0 tls_disable_tlsv1_3=1 tls_disable_session_ticket=1 fast_provisioning=2"
+	phase1="tls_disable_tlsv1_0=1 tls_disable_tlsv1_1=1 tls_disable_tlsv1_2=0 tls_disable_tlsv1_3=1 tls_disable_session_ticket=1 fast_provisioning=2"
 
 	pac_file="blob://eap-fast-pac"
 
